// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackButton should not redirect to given url when disabled 1`] = `
<div>
  <button
    class="css-11quel4"
    disabled=""
  >
    <div
      class="mx-auto css-15txs7d"
      height="10"
      width="10"
    >
      <svg>
        chevron-left-small.svg
      </svg>
    </div>
  </button>
</div>
`;

exports[`BackButton should not redirect to previous page when disabled 1`] = `
<div>
  <button
    class="css-11quel4"
    disabled=""
  >
    <div
      class="mx-auto css-15txs7d"
      height="10"
      width="10"
    >
      <svg>
        chevron-left-small.svg
      </svg>
    </div>
  </button>
</div>
`;

exports[`BackButton should redirect to given url 1`] = `
<div>
  <button
    class="css-1v0i3m7"
  >
    <div
      class="mx-auto css-15txs7d"
      height="10"
      width="10"
    >
      <svg>
        chevron-left-small.svg
      </svg>
    </div>
  </button>
</div>
`;

exports[`BackButton should redirect to previous page 1`] = `
<div>
  <button
    class="css-1v0i3m7"
  >
    <div
      class="mx-auto css-15txs7d"
      height="10"
      width="10"
    >
      <svg>
        chevron-left-small.svg
      </svg>
    </div>
  </button>
</div>
`;

exports[`BackButton should render 1`] = `
<div>
  <button
    class="css-1v0i3m7"
  >
    <div
      class="mx-auto css-15txs7d"
      height="10"
      width="10"
    >
      <svg>
        chevron-left-small.svg
      </svg>
    </div>
  </button>
</div>
`;

exports[`BackButton should render when disabled 1`] = `
<div>
  <button
    class="css-11quel4"
    disabled=""
  >
    <div
      class="mx-auto css-15txs7d"
      height="10"
      width="10"
    >
      <svg>
        chevron-left-small.svg
      </svg>
    </div>
  </button>
</div>
`;
